[package]
name = "bevy_mod_gizmos"
description = "Visual gizmos to aid with development and debugging in Bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LiamGallagher737/bevy_gizmos"
readme = "README.md"
version = "0.2.0"
edition = "2021"
exclude = [".github/"]

[workspace]
members = [
    "examples/*",
]

[dependencies]
bevy = "0.9"
bevy_mod_picking = "0.10"
lazy_static = "1.4"
