[package]
name = "bevy_mod_gizmos"
version = "0.3.0"
description = "Visual gizmos to aid with development and debugging in Bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LiamGallagher737/bevy_gizmos"
readme = "README.md"
edition = "2021"
exclude = [".github/"]

[dependencies]
bevy = "0.9"
lazy_static = "1.4"
